<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientbackground"
    tools:context=".BankActivity">

    <LinearLayout
        android:id="@+id/bankLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_bank_foreground"
            android:id="@+id/imageBank"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bank"
            android:textStyle="bold"
            android:textSize="40dp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="0"
                android:id="@+id/balanceTxt"
                />
        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/collectedCoinsList"
        android:layout_below="@+id/bankLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnSingUp"
            android:text="@string/collected"
            android:textSize="20dp"/>
        <android.support.v7.widget.RecyclerView
            android:layout_below="@id/bankLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/recievedCoinsList"
        android:layout_below="@+id/collectedCoinsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnSingUp"
            android:text="@string/received"
            android:textSize="20dp"/>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/received_recycler_view">
        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/mapButton"
            android:text="@string/Map"
            />

    </LinearLayout>


</RelativeLayout>